[metadata]
name = vinylsnek
version = 0.1.0
author = Atte Viertola
author_email = atte.viertola@gmail.com
description = Simple Python project for catalogin vinyl records using the Discogs API.
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    discogs_client
    pydantic
    sqlalchemy

[options.entry_points]
console_scripts =
    vinylsnek = vinylsnek.main:main
